# parsix

./: .gitmodules  CMakeLists.txt  CMakePresets.json  DFA.h  FiniteStateMachine.cpp  FiniteStateMachine.h  LADataStructs.h  LLParser.hpp  LexicalAnalyzer.h  NFA.h  PDataStructs.h  PEnum.cpp  PItem.h  PProduction.h  PStack.h  PTable.cpp  PTable.h  Parser.h  ParserTests.cpp  README.md  common.cpp  common.h  parsix.sln  parsix.vcxproj  parsix.vcxproj.filters
docs/Sphinx/source/: conf.py  conf.py.in  index.rst
docs/Sphinx/source/API/: enum.rst  exception.rst  item.rst  llparser.rst  lrparser.rst  parser.rst  production.rst  stack.rst  (+3 more)
docs/html/: _l_l_parser_8hpp.html  _l_l_parser_8hpp.js  _l_l_parser_8hpp_source.html  _l_r_parser_8hpp.html  _l_r_parser_8hpp.js  _l_r_parser_8hpp_source.html  _p_data_structs_8h.html  _p_data_structs_8h.js  _p_data_structs_8h_source.html  _p_enum_8cpp.html  _p_enum_8cpp.js  _p_enum_8h.html  _p_enum_8h.js  _p_enum_8h_source.html  _p_exceptions_8h.html  _p_exceptions_8h.js  _p_exceptions_8h_source.html  _p_item_8h.html  _p_item_8h.js  _p_item_8h_source.html  _p_production_8h.html  _p_production_8h.js  _p_production_8h_source.html  _p_stack_8h.html  _p_stack_8h.js  _p_stack_8h_source.html  _p_table_8cpp.html  _p_table_8h.html  _p_table_8h.js  _p_table_8h_source.html  _parser_8h.html  _parser_8h.js  _parser_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  classm0st4fa_1_1_grammatical_symbol_string-members.html  classm0st4fa_1_1_grammatical_symbol_string.html  classm0st4fa_1_1_grammatical_symbol_string.js  (+102 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+25 more)
docs/latex/: _l_l_parser_8hpp.tex  _l_l_parser_8hpp_source.tex  _l_r_parser_8hpp.tex  _l_r_parser_8hpp_source.tex  _p_data_structs_8h.tex  _p_data_structs_8h_source.tex  _p_enum_8cpp.tex  _p_enum_8h.tex  _p_enum_8h_source.tex  _p_exceptions_8h.tex  _p_exceptions_8h_source.tex  _p_item_8h.tex  _p_item_8h_source.tex  _p_production_8h.tex  _p_production_8h_source.tex  _p_stack_8h.tex  _p_stack_8h_source.tex  _p_table_8cpp.tex  _p_table_8h.tex  _p_table_8h_source.tex  _parser_8h.tex  _parser_8h_source.tex  annotated.tex  classm0st4fa_1_1_grammatical_symbol_string.tex  classm0st4fa_1_1_item.tex  classm0st4fa_1_1_item_set.tex  classm0st4fa_1_1_l_l_parser.eps  classm0st4fa_1_1_l_l_parser.tex  classm0st4fa_1_1_l_r_parser.eps  classm0st4fa_1_1_l_r_parser.tex  classm0st4fa_1_1_parser.eps  classm0st4fa_1_1_parser.tex  classm0st4fa_1_1_production_record.tex  classm0st4fa_1_1_production_vector.tex  conceptm0st4fa_1_1_parser_requirments.tex  conceptm0st4fa_1_1_stack_element_constraints.tex  concepts.tex  files.tex  hierarchy.tex  main_8cpp.tex  (+17 more)
examples/: CMakeLists.txt  llparser.cpp  main.cpp
include/parsix/: Item.h  LLParser.h  LRParser.h  PDataStructs.h  enum.h  exception.h  parser.h  production.h  ptable.h  stack.h
src/: PEnum.cpp  PTable.cpp
tests/: CMakeLists.txt  ParserTests.cpp  Tests.ixx  dfa.cpp  fsm.h  lexical analyzer.cpp  ll parser 1.cpp  ll parser.cpp  ll parser.h  llparser.cpp  nfa.cpp  universal.cpp  universal.h
